# napari-generic-SIMulator

./: .gitignore  Jupyter_SIMulator.ipynb  Jupyter_psf_&_otf.ipynb  LICENSE  README.md  SIMulator_runner.py  filament.pcd  points.pcd  pyproject.toml  setup.cfg  test.pcd  tox.ini
src/: Jupyter_SIMulator.ipynb  Untitled.ipynb
src/napari_generic_simulator/: Illumination.py  __init__.py  _widget.py  baseSIMulator.py  conSIMulator.py  hexSIMulator.py  napari.yaml  raw_data_generator.py
src/napari_generic_simulator/_tests/: test_widget.py
