[metadata]
name = napari-generic-SIMulator

description = A simple plugin to use with napari to simulate raw image stacks in Structured illumination microscopy (SIM) with napari.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Meizhu-Liang/napari-generic-SIMulator
author = Meizhu Liang
author_email = ml2618@ic.ac.uk
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

project_urls =
    Bug Tracker = https://github.com/Meizhu-Liang/napari-generic-SIMulator/issues
    Documentation = https://github.com/Meizhu-Liang/napari-generic-SIMulator#README.md
    Source Code = https://github.com/Meizhu-Liang/napari-generic-SIMulator
    User Support = https://github.com/Meizhu-Liang/napari-generic-SIMulator/issues

[options]
packages = find:
install_requires =
    numpy
    magicgui
    qtpy
    tifffile
    open3d

python_requires = >=3.8
include_package_data = True
package_dir =
    =src
setup_requires = setuptools_scm
# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-generic-SIMulator = napari_generic_simulator:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5
    tifffile
    open3d
    torch


[options.package_data]
* = *.yaml


